cmake_minimum_required(VERSION 3.15)
project(bedrock LANGUAGES CXX)

add_library(bedrock SHARED
        bedrock/shared_constants.cpp
        bedrock/certificates/certificate.cpp
        bedrock/certificates/extended_certificate.cpp
        bedrock/certificates/web_token.cpp
        bedrock/config/player_capabilities.cpp
        bedrock/core/debug/bedrock_event_logger.cpp
        bedrock/core/file/path.cpp
        bedrock/core/math/color.cpp
        bedrock/core/resource/resource_helper.cpp
        bedrock/core/sem_ver/sem_version.cpp
        bedrock/core/string/string_hash.cpp
        bedrock/core/utility/binary_stream.cpp
        bedrock/deps/json/value.cpp
        bedrock/deps/raknet/get_time.cpp
        bedrock/deps/raknet/raknet_socket2.cpp
        bedrock/deps/raknet/raknet_types.cpp
        bedrock/entity/gamerefs_entity/entity_registry.cpp
        bedrock/entity/gamerefs_entity/stack_result_storage_entity.cpp
        bedrock/entity/gamerefs_entity/weak_storage_entity.cpp
        bedrock/entity/utilities/synched_actor_data_access.cpp
        bedrock/locale/i18n.cpp
        bedrock/locale/localization.cpp
        bedrock/nbt/compound_tag.cpp
        bedrock/nbt/list_tag.cpp
        bedrock/nbt/nbt_io.cpp
        bedrock/nbt/tag.cpp
        bedrock/network/network_identifier.cpp
        bedrock/network/packet.cpp
        bedrock/network/rak_peer_helper.cpp
        bedrock/network/server_network_handler.cpp
        bedrock/network/packet/crafting_data_packet.cpp
        bedrock/network/packet/start_game_packet.cpp
        bedrock/platform/assigned_thread.cpp
        bedrock/platform/uuid.cpp
        bedrock/resources/pack.cpp
        bedrock/resources/pack_error.cpp
        bedrock/resources/pack_manifest.cpp
        bedrock/resources/pack_source.cpp
        bedrock/resources/resource_pack.cpp
        bedrock/resources/resource_pack_manager.cpp
        bedrock/resources/resource_pack_repository.cpp
        bedrock/resources/resource_pack_stack.cpp
        bedrock/scripting/event_handlers/script_level_gameplay_handler.cpp
        bedrock/server/server_instance.cpp
        bedrock/server/server_level.cpp
        bedrock/server/server_player.cpp
        bedrock/server/commands/command.cpp
        bedrock/server/commands/command_origin.cpp
        bedrock/server/commands/command_origin_loader.cpp
        bedrock/server/commands/command_output.cpp
        bedrock/server/commands/command_registry.cpp
        bedrock/server/commands/command_utils.cpp
        bedrock/server/commands/minecraft_commands.cpp
        bedrock/server/commands/standard/say_command.cpp
        bedrock/server/commands/standard/teleport_command.cpp
        bedrock/util/data_io.cpp
        bedrock/util/index_set.cpp
        bedrock/util/string_byte_output.cpp
        bedrock/world/game_session.cpp
        bedrock/world/minecraft.cpp
        bedrock/world/actor/actor.cpp
        bedrock/world/actor/actor_definition_identifier.cpp
        bedrock/world/actor/mob.cpp
        bedrock/world/actor/synched_actor_data.cpp
        bedrock/world/actor/player/abilities.cpp
        bedrock/world/actor/player/player.cpp
        bedrock/world/attribute/attribute_instance.cpp
        bedrock/world/attribute/attribute_map.cpp
        bedrock/world/events/level_event_coordinator.cpp
        bedrock/world/events/player_event_coordinator.cpp
        bedrock/world/events/scripting_event_coordinator.cpp
        bedrock/world/events/server_instance_event_coordinator.cpp
        bedrock/world/gamemode/game_mode.cpp
        bedrock/world/inventory/network/item_stack_net_id_variant.cpp
        bedrock/world/item/item.cpp
        bedrock/world/item/item_descriptor.cpp
        bedrock/world/item/item_instance.cpp
        bedrock/world/item/item_stack.cpp
        bedrock/world/item/item_stack_base.cpp
        bedrock/world/item/registry/creative_item_entry.cpp
        bedrock/world/item/registry/creative_item_registry.cpp
        bedrock/world/item/registry/item_registry.cpp
        bedrock/world/item/registry/item_registry_manager.cpp
        bedrock/world/item/registry/item_registry_ref.cpp
        bedrock/world/level/explosion.cpp
        bedrock/world/level/level.cpp
        bedrock/world/level/biome/registry/biome_registry.cpp
        bedrock/world/level/block/block.cpp
        bedrock/world/level/block/block_descriptor.cpp
        bedrock/world/level/block/block_legacy.cpp
        bedrock/world/level/block/actor/furnace_block_actor.cpp
        bedrock/world/level/block/registry/block_type_registry.cpp
        bedrock/world/level/dimension/dimension.cpp
        bedrock/world/scores/objective.cpp
        bedrock/world/scores/scoreboard.cpp
        bedrock/world/scores/scoreboard_id.cpp
        bedrock/world/scores/server_scoreboard.cpp
)
add_library(bedrock::bedrock ALIAS bedrock)

target_compile_definitions(bedrock::bedrock PUBLIC ENTT_SPARSE_PAGE=2048)
target_compile_definitions(bedrock::bedrock PUBLIC ENTT_PACKED_PAGE=128)
